--- a/css/carousel.css
+++ b/css/carousel.css
@@ -23,6 +23,7 @@
   left: calc(-100% + 15px);
   bottom: 15px;
 }
+
 .screenshot:nth-child(1) {
   z-index: 2;
   left: 30px;
@@ -68,5 +69,20 @@ with different numbers of slides
     left: 30px;
     bottom: 30px;
     scale: 1.0;
+  }
+}
+
+@keyframes pulse {
+  25% {
+    scale: 1.05
+  }
+  50% {
+    scale: 1.00
+  }
+  75% {
+    scale: 0.95
+  }
+  100% {
+    scale: 1.00
   }
 }
